--- a/index.html
+++ b/index.html
@@ -7,38 +7,38 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="container">
+        <header>
+            <h1>ohmyfood</h1>
+        </header>
 
-    <header>
-        <h1>ohmyfood</h1>
-    </header>
+        <main>
+            <section id="menu1"> 
+                <h2>La note enchantée<br/>Menu</h2>
+            </section>
+            <section id="menu2"> 
+                <h2>Le chic à la française<br/>Menu</h2>
+            </section>
+            <section id="menu3"> 
+                <h2>Le délice des papilles<br/>Menu</h2>
+            </section>
+            <section id="menu4"> 
+                <h2>La palette du goût<br/>Menu</h2>
+            </section>
+        </main>
 
-    <main>
-        <section id="menu1"> 
-            <h2>La note enchantée<br/>Menu</h2>
-            <a href="menu1.html"></a>
-        </section>
-        <section id="menu2"> 
-            <h2>Le chic à la française<br/>Menu</h2>
-        </section>
-        <section id="menu3"> 
-            <h2>Le délice des papilles<br/>Menu</h2>
-        </section>
-        <section id="menu4"> 
-            <h2>La palette du goût<br/>Menu</h2>
-        </section>
-    </main>
+        <aside>
+            <h2>Prochainement</h2>
+        </aside>
 
-    <aside>
-        <h2>Prochainement</h2>
-    </aside>
-
-    <footer>
-        <nav>
-            <h2>Mentions légales</h2>
-        </nav>
-        <nav>
-            <h2>Contactez-nous</h2>
-        </nav>
-    </footer>
+        <footer>
+            <nav>
+                <h2>Mentions légales</h2>
+            </nav>
+            <nav>
+                <h2><a href="mailto:Ohmyfood@gmail.com">Contactez-nous</a></h2>
+            </nav>
+        </footer>
+    </div>
 </body>
 </html>
