--- a/index.html
+++ b/index.html
@@ -5,35 +5,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ohmyfood</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/0c7937f838.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="container">
+    <!--le container contien un header, un main avec plusieur section, un aside et un footer-->
         <header>
-            <h1>ohmyfood</h1>
+        <!--le header contient un titre h1-->
+            <h1><a href="index.html">ohmyfood</a></h1>
         </header>
 
         <main>
+        <!--le main est divisé en 4 parties qui represente les 4 menu de la page-->
             <section id="menu1"> 
-                <h2>La note enchantée<br/>Menu</h2>
+                <a href="html/menu1.html">
+                    <h2><i class="fas fa-music"></i><br/>La note enchantée</h2>
+                    <h3>Menu</h3>
+                </a>
             </section>
             <section id="menu2"> 
-                <h2>Le chic à la française<br/>Menu</h2>
+                <a href="html/menu2.html">
+                    <h2>Le chic à la française</h2>
+                    <h3>Menu</h3>
+                </a>
             </section>
             <section id="menu3"> 
-                <h2>Le délice des papilles<br/>Menu</h2>
+                <a href="html/menu3.html">
+                    <h2>Le délice des papilles</h2>
+                    <h3>Menu</h3>
+                </a>
             </section>
             <section id="menu4"> 
-                <h2>La palette du goût<br/>Menu</h2>
+                <a href="html/menu4.html">
+                    <h2>La palette du goût</h2>
+                    <h3>Menu</h3>
+                </a>
             </section>
         </main>
 
         <aside>
+        <!--Le aside contient un titre h2 et une animation-->
             <h2>Prochainement</h2>
         </aside>
 
         <footer>
+        <!--le footer contient 2 parties une des mentions legales et une autre avec le contact-->
             <nav>
-                <h2>Mentions légales</h2>
+                <h2><a href="html/mentions.html">Mentions légales</a></h2>
             </nav>
             <nav>
                 <h2><a href="mailto:Ohmyfood@gmail.com">Contactez-nous</a></h2>
