Page principal Fini(sans animation)

--- a/html/menu1.html
+++ b/html/menu1.html
@@ -16,7 +16,7 @@
         <footer>
         <!--le footer contient 2 parties une des mentions legales et une autre avec le contact-->
             <nav>
-                <h2><a href="mentions.html">Mentions légales</a></h2>
+                <h2><a href="mentions.html"  target="_blank">Mentions légales</a></h2>
             </nav>
             <nav>
                 <h2><a href="mailto:Ohmyfood@gmail.com">Contactez-nous</a></h2>
