--- a/index.html
+++ b/index.html
@@ -18,29 +18,29 @@
         <main>
         <!--le main est divisé en 4 parties qui represente les 4 menu de la page-->
             <section id="menu1"> 
-                <a href="html/menu1.html">
-                    <h2><i class="fas fa-music"></i><br/>La note enchantée</h2>
-                    <h3>Menu</h3>
-                </a>
+                <a href="html/menu1.html"></a>
+                <h2><i class="fas fa-music"></i><br/>La note enchantée</h2>
+                <h3>Menu</h3>            
             </section>
+
             <section id="menu2"> 
-                <a href="html/menu2.html">
-                    <h2>Le chic à la française</h2>
-                    <h3>Menu</h3>
-                </a>
+                <a href="html/menu2.html"></a>
+                <h2>Le chic à la française</h2>
+                <h3>Menu</h3>
             </section>
+
             <section id="menu3"> 
-                <a href="html/menu3.html">
-                    <h2>Le délice des papilles</h2>
-                    <h3>Menu</h3>
-                </a>
+                <a href="html/menu3.html"></a>
+                <h2>Le délice des papilles</h2>
+                <h3>Menu</h3>            
             </section>
+
             <section id="menu4"> 
-                <a href="html/menu4.html">
-                    <h2>La palette du goût</h2>
-                    <h3>Menu</h3>
-                </a>
+                <a href="html/menu4.html"></a>
+                <h2>La palette du goût</h2>
+                <h3>Menu</h3>            
             </section>
+
         </main>
 
         <aside>
@@ -51,7 +51,7 @@
         <footer>
         <!--le footer contient 2 parties une des mentions legales et une autre avec le contact-->
             <nav>
-                <h2><a href="html/mentions.html">Mentions légales</a></h2>
+                <h2><a href="html/mentions.html"  target="_blank">Mentions légales</a></h2>
             </nav>
             <nav>
                 <h2><a href="mailto:Ohmyfood@gmail.com">Contactez-nous</a></h2>
