--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ohmyfood</title>
     <link rel="stylesheet" href="style.css">
+    <link href="logo/Logo.jpg.jpg" rel="shortcut icon" >
     <script src="https://kit.fontawesome.com/0c7937f838.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -20,7 +21,7 @@
             <section id="menu1"> 
                 <a href="html/menu1.html"></a>
                 <h2><i class="fas fa-music"></i><br/>La note enchantée</h2>
-                <h3>Menu</h3>            
+                <h3>MENU</h3>            
             </section>
 
             <section id="menu2"> 
@@ -46,6 +47,11 @@
         <aside>
         <!--Le aside contient un titre h2 et une animation-->
             <h2>Prochainement</h2>
+            <div id="suspension">
+                <div class="point"></div>
+                <div class="point"></div>
+                <div class="point"></div>
+            </div>
         </aside>
 
         <footer>
