--- a/index.html
+++ b/index.html
@@ -19,27 +19,35 @@
         <main>
         <!--le main est divisé en 4 parties qui represente les 4 menu de la page-->
             <section id="menu1"> 
-                <a href="html/menu1.html"></a>
-                <h2><i class="fas fa-music"></i><br/>La note enchantée</h2>
-                <h3>MENU</h3>            
+                <article>
+                    <a href="html/menu1.html"></a>
+                    <h2><i class="fas fa-music"></i><br/>La note enchantée</h2>
+                    <h3>MENU</h3>   
+                </article>         
             </section>
 
             <section id="menu2"> 
-                <a href="html/menu2.html"></a>
-                <h2>Le chic à la française</h2>
-                <h3>Menu</h3>
+                <article>
+                    <a href="html/menu2.html"></a>
+                    <h2>Le chic à la française</h2>
+                    <h3>Menu</h3>
+                </article>
             </section>
 
             <section id="menu3"> 
-                <a href="html/menu3.html"></a>
-                <h2>Le délice des papilles</h2>
-                <h3>Menu</h3>            
+                <article>
+                    <a href="html/menu3.html"></a>
+                    <h2>Le délice des papilles</h2>
+                    <h3>Menu</h3>
+                </article>            
             </section>
 
             <section id="menu4"> 
-                <a href="html/menu4.html"></a>
-                <h2>La palette du goût</h2>
-                <h3>Menu</h3>            
+                <article>
+                    <a href="html/menu4.html"></a>
+                    <h2>La palette du goût</h2>
+                    <h3>Menu</h3>  
+                </article>          
             </section>
 
         </main>
@@ -48,9 +56,9 @@
         <!--Le aside contient un titre h2 et une animation-->
             <h2>Prochainement</h2>
             <div id="suspension">
-                <div class="point"></div>
-                <div class="point"></div>
-                <div class="point"></div>
+                <div class="point point--1"></div>
+                <div class="point point--2"></div>
+                <div class="point point--3"></div>
             </div>
         </aside>
 
