Site fini (sans MQ et animation titre menu

--- a/html/menu3.html
+++ b/html/menu3.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ohmyfood</title>
     <link rel="stylesheet" href="../style.css">
+    <script src="https://kit.fontawesome.com/0c7937f838.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="container">
@@ -12,6 +13,57 @@
         <!--le header contient un titre h1-->
             <h1><a href="../index.html">ohmyfood</a></h1>
         </header>
+
+        <main id="menu3">
+            <section>
+                <h2>Le délice des papilles</h2>
+            </section>
+            <section>
+                <h3>Pour bien commencer</h3>
+                <article>
+                    <ul class="plats">
+                        <li>Tartare de thon assaisonné au yuzu</li>
+                        <li>Bouchée de homard croustillant et sa farandole de petits légumes</li>
+                        <li>Velouté de cèpes aux truffes</li>
+                    </ul>
+                    <ul class="prix">
+                        <li>55€</li>
+                        <li>89€</li>
+                        <li>56€</li>
+                    </ul>
+                </article>
+            </section>
+            <section>
+                <h3>Pour bien continuer</h3>
+                <article>
+                    <ul class="plats">
+                        <li>Poulet rôti aux herbes de provence et sa crème de truffe</li>
+                        <li>Langouste rôtie et ses légumes de saison</li>
+                        <li>Côte de boeuf angus et sa purée de panais</li>
+                    </ul>
+                    <ul class="prix">
+                        <li>110€</li>
+                        <li>225€</li>
+                        <li>115€</li>
+                    </ul>
+                </article>
+            </section>
+            <section>
+                <h3>Pour bien terminer</h3>
+                <article>
+                    <ul class="plats">
+                        <li>Farandole de desserts du chef</li>
+                        <li>Crème brulée revisitée</li>
+                        <li>Tiramisu à la noisette</li>
+                    </ul>
+                    <ul class="prix">
+                        <li>55€</li>
+                        <li>60€</li>
+                        <li>55€</li>
+                    </ul>
+                </article>
+            </section>
+        </main>
 
         <footer>
         <!--le footer contient 2 parties une des mentions legales et une autre avec le contact-->
