--- a/html/menu1.html
+++ b/html/menu1.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ohmyfood</title>
     <link rel="stylesheet" href="../style.css">
+    <script src="https://kit.fontawesome.com/0c7937f838.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="container">
@@ -12,6 +13,57 @@
         <!--le header contient un titre h1-->
             <h1><a href="../index.html">ohmyfood</a></h1>
         </header>
+        
+        <main id="menu1">
+            <section>
+                <h2><i class="fas fa-music"></i><br/>La note enchantée</h2>
+            </section>
+            <section>
+                <h4> Prélude</h4>
+                <article>
+                    <ul class="plats">
+                        <li>Ravioles de foie gras accompagnés de leur crème à la truffe</li>
+                        <li>Caviar osciètre sur blini à la farine de blé noir</li>
+                        <li>Homard et espuma de potiron mariné aux zests d'orange</li>
+                        <li>Foie gras de canard cuit entier, confiture de figue et pain toasté</li>
+                    </ul>
+                    <ul class="prix">
+                        <li>98€</li>
+                        <li>115€</li>
+                        <li>89€</li>
+                        <li>105€</li>
+                    </ul>
+                </article>
+            </section>
+            <section>
+                <h4>Point d'orgue</h4>
+                <article>
+                    <ul class="plats">
+                        <li>Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave</li>
+                        <li>Langoustine poêlée, purée de patate douce</li>
+                        <li>Mijoté de queue de boeuf et riz sauvage aux zests de citron</li>
+                    </ul>
+                    <ul class="prix">
+                        <li>102€</li>
+                        <li>205€</li>
+                        <li>169€</li>
+                    </ul>
+                </article>
+            </section>
+            <section>
+                <h4>Mouvement final</h4>
+                <article>
+                    <ul class="plats">
+                        <li>Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</li>
+                        <li>Baba au rhum revisité avec son coulis de citron</li>
+                        <li>Tarte au citron meringuée destructurée</li>
+                    </ul>
+                </article>
+            </section>
+            <section>
+                <h3><i class="fas fa-music"></i> La note enchantée</h3>
+            </section>
+        </main>
 
         <footer>
         <!--le footer contient 2 parties une des mentions legales et une autre avec le contact-->
