--- a/html/menu2.html
+++ b/html/menu2.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ohmyfood</title>
     <link rel="stylesheet" href="../style.css">
+    <script src="https://kit.fontawesome.com/0c7937f838.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="container">
@@ -12,6 +13,52 @@
         <!--le header contient un titre h1-->
             <h1><a href="../index.html">ohmyfood</a></h1>
         </header>
+
+        <main id="menu2">
+            <section>
+                <h2>Le chic à la française</h2>
+            </section>
+            <section id="entrée">
+                <h3>Pour se mettre en appétit</h3>
+                <article>
+                    <ul class="plats">
+                        <li>Tartare de poulpe acidulé aux zests d'orange</li>
+                        <li>Velouté de légumes d'antan</li>
+                        <li>Soupe à l'oignon revisitée</li>
+                    </ul>
+                    <ul class="prix">
+                        <li>79€</li>
+                        <li>57€</li>
+                        <li>57€</li>
+                    </ul>
+                </article>
+            </section>
+            <section id="plat">
+                <h3>Plaisir des papilles</h3>
+                <article>
+                    <ul class="plats">
+                        <li>Coquilles Saint-Jacques accompagnées d'une purée de panais</li>
+                        <li>Magret de canard et parmentier de pommes de terres</li>
+                        <li>Mijoté de queue de boeuf et riz sauvage aux zests de citron</li>
+                    </ul>
+                    <ul class="prix">
+                        <li>95€</li>
+                        <li>88€</li>
+                        <li>175€</li>
+                    </ul>
+                </article>
+            </section>
+            <section id="dessert">
+                <h3>Gourmandises sucrées</h3>
+                <article>
+                    <ul class="plats">
+                        <li>Pétales de violettes glacés et purée de noisettes</li>
+                        <li>Fondant au chocolat revisité</li>
+                        <li>Millefeuille croustillant</li>
+                    </ul>
+                </article>
+            </section>
+        </main>
 
         <footer>
         <!--le footer contient 2 parties une des mentions legales et une autre avec le contact-->
