--- a/html/menu4.html
+++ b/html/menu4.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ohmyfood</title>
     <link rel="stylesheet" href="../style.css">
+    <script src="https://kit.fontawesome.com/0c7937f838.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="container">
@@ -12,6 +13,57 @@
         <!--le header contient un titre h1-->
             <h1><a href="../index.html">ohmyfood</a></h1>
         </header>
+
+        <main id="menu4">
+            <section>
+                <h2>La palette du goût</h2>
+            </section>
+            <section>
+                <h3>Esquisse</h3>
+                <article>
+                    <ul class="plats">
+                        <li>Fricassée d'escargot au piment d'espelette</li>
+                        <li>Oeuf au plat assaisonné à la truffe sur lit de caviar</li>
+                        <li>Foie gras de canard mi-cuit et ses copeaux de truffe noire</li>
+                    </ul>
+                    <ul class="prix">
+                        <li>60€</li>
+                        <li>55€</li>
+                        <li>65€</li>
+                    </ul>
+                </article>
+            </section>
+            <section>
+                <h3>Oeuvre de maître</h3>
+                <article>
+                    <ul class="plats">
+                        <li>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</li>
+                        <li>Parmentier de queue de boeuf à la truffe noire sur sa purée de panais</li>
+                        <li>Filet de Turbot aux agrumes</li>
+                    </ul>
+                    <ul class="prix">
+                        <li>70€</li>
+                        <li>85€</li>
+                        <li>125€</li>
+                    </ul>
+                </article>
+            </section>
+            <section>
+                <h3>Au sommet de l'art</h3>
+                <article>
+                    <ul class="plats">
+                        <li>Paris-Brest revisité</li>
+                        <li>Macaron au chocolat d'exception et glace à la vanille de Madagascar</li>
+                        <li>Mousse au chocolat au piment d'espelette et à la truffe noire</li>
+                    </ul>
+                    <ul class="prix">
+                        <li>55€</li>
+                        <li>65€</li>
+                        <li>60€</li>
+                    </ul>
+                </article>
+            </section>
+        </main>
 
         <footer>
         <!--le footer contient 2 parties une des mentions legales et une autre avec le contact-->
