--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <h1><a href="index.html">ohmyfood</a></h1>
         </header>
 
-        <main>
+        <main id="pageprincipal">
         <!--le main est divisé en 4 parties qui represente les 4 menu de la page-->
-            <section id="menu1"> 
+            <section id="mini_menu1"> 
                 <article>
                     <a href="html/menu1.html"></a>
                     <h2><i class="fas fa-music"></i><br/>La note enchantée</h2>
@@ -26,7 +26,7 @@
                 </article>         
             </section>
 
-            <section id="menu2"> 
+            <section id="mini_menu2"> 
                 <article>
                     <a href="html/menu2.html"></a>
                     <h2>Le chic à la française</h2>
@@ -34,7 +34,7 @@
                 </article>
             </section>
 
-            <section id="menu3"> 
+            <section id="mini_menu3"> 
                 <article>
                     <a href="html/menu3.html"></a>
                     <h2>Le délice des papilles</h2>
@@ -42,7 +42,7 @@
                 </article>            
             </section>
 
-            <section id="menu4"> 
+            <section id="mini_menu4"> 
                 <article>
                     <a href="html/menu4.html"></a>
                     <h2>La palette du goût</h2>
