--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ohmyfood</title>
     <link rel="stylesheet" href="style.css">
-    <link href="logo/Logo.jpg.jpg" rel="shortcut icon" >
+    <link href="logo/Logo.jpg" rel="shortcut icon" >
     <script src="https://kit.fontawesome.com/0c7937f838.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -19,35 +19,31 @@
         <main id="pageprincipal">
         <!--le main est divisé en 4 parties qui represente les 4 menu de la page-->
             <section id="mini_menu1"> 
-                <article>
-                    <a href="html/menu1.html"></a>
+                <a href="html/menu1.html">
                     <h2><i class="fas fa-music"></i><br/>La note enchantée</h2>
-                    <h3>MENU</h3>   
-                </article>         
+                    <p>MENU</p>   
+                </a>         
             </section>
 
-            <section id="mini_menu2"> 
-                <article>
-                    <a href="html/menu2.html"></a>
+            <section id="mini_menu2">       
+                <a href="html/menu2.html">
                     <h2>Le chic à la française</h2>
-                    <h3>Menu</h3>
-                </article>
+                    <p>Menu</p>
+                </a>
             </section>
 
             <section id="mini_menu3"> 
-                <article>
-                    <a href="html/menu3.html"></a>
+                <a href="html/menu3.html">
                     <h2>Le délice des papilles</h2>
-                    <h3>Menu</h3>
-                </article>            
+                    <p>Menu</p>
+                </a>            
             </section>
 
             <section id="mini_menu4"> 
-                <article>
-                    <a href="html/menu4.html"></a>
+                <a href="html/menu4.html">
                     <h2>La palette du goût</h2>
-                    <h3>Menu</h3>  
-                </article>          
+                    <p>Menu</p>  
+                </a>          
             </section>
 
         </main>
@@ -63,13 +59,15 @@
         </aside>
 
         <footer>
-        <!--le footer contient 2 parties une des mentions legales et une autre avec le contact-->
-            <nav>
-                <h2><a href="html/mentions.html"  target="_blank">Mentions légales</a></h2>
-            </nav>
-            <nav>
-                <h2><a href="mailto:Ohmyfood@gmail.com">Contactez-nous</a></h2>
-            </nav>
+        <!--le footer contient une liste avec 2 parties une des mentions legales et une autre avec le contact-->
+            <ul>
+                <li>
+                    <a href="html/mentions.html"  target="_blank">Mentions légales</a>
+                </li>
+                <li>
+                    <a href="mailto:Ohmyfood@gmail.com">Contactez-nous</a>
+                </li>
+            </ul>
         </footer>
     </div>
 </body>
