Menu 1 modifier dans le html

--- a/html/mentions.html
+++ b/html/mentions.html
@@ -14,10 +14,10 @@
         </header>
 
         <main id="mentions">
-            <section>
+            <header>
                 <h2>Mentions Légales</h2>
                 <p>Conformément aux dispositions de la loi n° 2004-575 du 21 juin 2004 pour la confiance en l’économie numérique, il est précisé aux utilisateurs du site legalplace.fr l’identité des différents intervenants dans le cadre de sa réalisation et de son suivi.</p>
-            </section>
+            </header>
             <section>
                 <h3>Edition du site</h3>
                 <p>Le site Ohmyfood.fr est édité par la société Ohmyfood, société par actions simplifiée au capital de 10.051,50 euros, dont le siège social est situé 7 rue Marcel Dassault, 92100 Boulogne-Billancourt, immatriculée au registre du commerce et des sociétés sous le numéro d’identification unique 814 428 785 RCS Nanterre.</p>
@@ -37,10 +37,15 @@
         </main>
 
         <footer>
-        <!--le footer contient une partie contact-->
-            <nav>
-                <h2><a href="mailto:Ohmyfood@gmail.com">Contactez-nous</a></h2>
-            </nav>
+        <!--le footer contient une liste avec 2 parties une des mentions legales et une autre avec le contact-->
+            <ul>
+                <li>
+                    <a href="html/mentions.html"  target="_blank">Mentions légales</a>
+                </li>
+                <li>
+                    <a href="mailto:Ohmyfood@gmail.com">Contactez-nous</a>
+                </li>
+            </ul>
         </footer>
     </div>
 </body>
