--- a/html/menu2.html
+++ b/html/menu2.html
@@ -62,12 +62,14 @@
 
         <footer>
         <!--le footer contient 2 parties une des mentions legales et une autre avec le contact-->
-            <nav>
-                <h2><a href="mentions.html"  target="_blank">Mentions légales</a></h2>
-            </nav>
-            <nav>
-                <h2><a href="mailto:Ohmyfood@gmail.com">Contactez-nous</a></h2>
-            </nav>
+            <ul>
+                <li>
+                    <a href="html/mentions.html"  target="_blank">Mentions légales</a>
+                </li>
+                <li>
+                    <a href="mailto:Ohmyfood@gmail.com">Contactez-nous</a>
+                </li>
+            </ul>
         </footer>
     </div>
 </body>
