--- a/html/menu1.html
+++ b/html/menu1.html
@@ -15,64 +15,104 @@
         </header>
         
         <main id="menu1">
-            <section>
+            <header>
                 <h2><i class="fas fa-music"></i><br/>La note enchantée</h2>
-            </section>
+            </header>
             <section>
-                <h4> Prélude</h4>
+                <h3><img src="../image/menu1_gauche.png" alt="trait gauche">Prélude<img src="../image/menu1_droite.png" alt="trait droite"></h3>
                 <article>
-                    <ul class="plats">
-                        <li>Ravioles de foie gras accompagnés de leur crème à la truffe</li>
-                        <li>Caviar osciètre sur blini à la farine de blé noir</li>
-                        <li>Homard et espuma de potiron mariné aux zests d'orange</li>
-                        <li>Foie gras de canard cuit entier, confiture de figue et pain toasté</li>
-                    </ul>
-                    <ul class="prix">
-                        <li>98€</li>
-                        <li>115€</li>
-                        <li>89€</li>
-                        <li>105€</li>
-                    </ul>
+                    <div class="plats">
+                        <p>Ravioles de foie gras accompagnés de leur crème à la truffe</p>
+                    </div>
+                    <div class="prix">
+                        <p>98€</p>
+                    </div>
+                </article>
+                <article>
+                    <div class="plats">
+                        <p>Caviar osciètre sur blini à la farine de blé noir</p>
+                    </div>
+                    <div class="prix">
+                        <p>115€</p>
+                    </div>
+                </article>
+                <article>
+                    <div class="plats">
+                        <p>Homard et espuma de potiron mariné aux zests d'orange</p>
+                    </div>
+                    <div class="prix">
+                        <p>89€</p>
+                    </div>
+                </article>
+                <article>
+                    <div class="plats">
+                        <p>Foie gras de canard cuit entier, confiture de figue et pain toasté</p>
+                    </div>
+                    <div class="prix">
+                        <p>105€</p>
+                    </div>
                 </article>
             </section>
             <section>
-                <h4>Point d'orgue</h4>
+                <h3><img src="../image/menu1_gauche.png" alt="trait gauche">Point d'orgue<img src="../image/menu1_droite.png" alt="trait droite"></h3>
                 <article>
-                    <ul class="plats">
-                        <li>Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave</li>
-                        <li>Langoustine poêlée, purée de patate douce</li>
-                        <li>Mijoté de queue de boeuf et riz sauvage aux zests de citron</li>
-                    </ul>
-                    <ul class="prix">
-                        <li>102€</li>
-                        <li>205€</li>
-                        <li>169€</li>
-                    </ul>
+                    <div class="plats">
+                        <p>Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave</p>
+                    </div>
+                    <div class="prix">
+                        <p>102€</p>
+                    </div>
+                </article>
+                <article>
+                    <div class="plats">
+                        <p>Langoustine poêlée, purée de patate douce</p>
+                    </div>
+                    <div class="prix">
+                        <p>205€</p>
+                    </div>
+                </article>
+                <article>
+                    <div class="plats">
+                        <p>Mijoté de queue de boeuf et riz sauvage aux zests de citron</p>
+                    </div>
+                    <div class="prix">
+                        <p>169€</p>
+                    </div>
                 </article>
             </section>
             <section>
-                <h4>Mouvement final</h4>
+                <h3><img src="../image/menu1_gauche.png" alt="trait gauche">Mouvement final<img src="../image/menu1_droite.png" alt="trait droite"></h3>
                 <article>
-                    <ul class="plats">
-                        <li>Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</li>
-                        <li>Baba au rhum revisité avec son coulis de citron</li>
-                        <li>Tarte au citron meringuée destructurée</li>
-                    </ul>
+                    <div class="plats">
+                        <p>Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
+                    </div>
+                </article>
+                <article>
+                    <div class="plats">
+                        <p>Baba au rhum revisité avec son coulis de citron</p>
+                    </div>
+                </article>
+                <article>
+                    <div class="plats">
+                        <p>Tarte au citron meringuée destructurée</p>
+                    </div>
                 </article>
             </section>
-            <section>
-                <h3><i class="fas fa-music"></i> La note enchantée</h3>
-            </section>
+            <footer>
+                <p><i class="fas fa-music"></i> La note enchantée</p>
+            </footer>
         </main>
 
         <footer>
-        <!--le footer contient 2 parties une des mentions legales et une autre avec le contact-->
-            <nav>
-                <h2><a href="mentions.html"  target="_blank">Mentions légales</a></h2>
-            </nav>
-            <nav>
-                <h2><a href="mailto:Ohmyfood@gmail.com">Contactez-nous</a></h2>
-            </nav>
+        <!--le footer contient une liste avec 2 parties une des mentions legales et une autre avec le contact-->
+            <ul>
+                <li>
+                    <a href="html/mentions.html"  target="_blank">Mentions légales</a>
+                </li>
+                <li>
+                    <a href="mailto:Ohmyfood@gmail.com">Contactez-nous</a>
+                </li>
+            </ul>
         </footer>
     </div>
 </body>
