Modification page html des menu 1 2 et 3

--- a/html/menu1.html
+++ b/html/menu1.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ohmyfood</title>
     <link rel="stylesheet" href="../style.css">
+    <link href="../logo/logo.jpg" rel="shortcut icon" >
     <script src="https://kit.fontawesome.com/0c7937f838.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -19,84 +20,68 @@
                 <h2><i class="fas fa-music"></i><br/>La note enchantée</h2>
             </header>
             <section>
-                <h3><img src="../image/menu1_gauche.png" alt="trait gauche">Prélude<img src="../image/menu1_droite.png" alt="trait droite"></h3>
-                <article>
-                    <div class="plats">
-                        <p>Ravioles de foie gras accompagnés de leur crème à la truffe</p>
-                    </div>
-                    <div class="prix">
-                        <p>98€</p>
-                    </div>
-                </article>
-                <article>
-                    <div class="plats">
-                        <p>Caviar osciètre sur blini à la farine de blé noir</p>
-                    </div>
-                    <div class="prix">
-                        <p>115€</p>
-                    </div>
-                </article>
-                <article>
-                    <div class="plats">
-                        <p>Homard et espuma de potiron mariné aux zests d'orange</p>
-                    </div>
-                    <div class="prix">
-                        <p>89€</p>
-                    </div>
-                </article>
-                <article>
-                    <div class="plats">
-                        <p>Foie gras de canard cuit entier, confiture de figue et pain toasté</p>
-                    </div>
-                    <div class="prix">
-                        <p>105€</p>
-                    </div>
-                </article>
+                <div class="titre_section">
+                    <img src="../image/menu1_gauche.png" alt="trait gauche">
+                    <h3>Prélude</h3>
+                    <img src="../image/menu1_droite.png" alt="trait droite">
+                </div>
+                <ul>
+                    <li>
+                        <p class="plats">Ravioles de foie gras accompagnés de leur crème à la truffe</p>
+                        <p class="prix">98€</p>
+                    </li>
+                    <li>
+                        <p class="plats">Caviar osciètre sur blini à la farine de blé noir</p>
+                        <p class="prix">115€</p>
+                    </li>
+                    <li>
+                        <p class="plats">Homard et espuma de potiron mariné aux zests d'orange</p>
+                        <p class="prix">89€</p>
+                    </li>
+                    <li>
+                        <p class="plats">Foie gras de canard cuit entier, confiture de figue et pain toasté</p>
+                        <p class="prix">105€</p>
+                    </li>
+                </ul>
             </section>
             <section>
-                <h3><img src="../image/menu1_gauche.png" alt="trait gauche">Point d'orgue<img src="../image/menu1_droite.png" alt="trait droite"></h3>
-                <article>
-                    <div class="plats">
-                        <p>Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave</p>
-                    </div>
-                    <div class="prix">
-                        <p>102€</p>
-                    </div>
-                </article>
-                <article>
-                    <div class="plats">
-                        <p>Langoustine poêlée, purée de patate douce</p>
-                    </div>
-                    <div class="prix">
-                        <p>205€</p>
-                    </div>
-                </article>
-                <article>
-                    <div class="plats">
-                        <p>Mijoté de queue de boeuf et riz sauvage aux zests de citron</p>
-                    </div>
-                    <div class="prix">
-                        <p>169€</p>
-                    </div>
-                </article>
+                <div class="titre_section">
+                    <img src="../image/menu1_gauche.png" alt="trait gauche">
+                    <h3>Point d'orgue</h3>
+                    <img src="../image/menu1_droite.png" alt="trait droite">
+                </div>
+                <ul>
+                    <li>
+                        <p class="plats">Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave</p>
+                        <p class="prix">102€</p>
+                    </li>
+                    <li>
+                        <p class="plats">Langoustine poêlée, purée de patate douce</p>
+                        <p class="prix">205€</p>
+                    </li>
+                    <li>
+                        <p class="plats">Mijoté de queue de boeuf et riz sauvage aux zests de citron</p>
+                        <p class="prix">169€</p>
+                    <li>
+                </ul>
             </section>
             <section>
-                <h3><img src="../image/menu1_gauche.png" alt="trait gauche">Mouvement final<img src="../image/menu1_droite.png" alt="trait droite"></h3>
-                <article>
-                    <div class="plats">
-                        <p>Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
-                    </div>
-                </article>
-                <article>
-                    <div class="plats">
-                        <p>Baba au rhum revisité avec son coulis de citron</p>
-                    </div>
-                </article>
-                <article>
-                    <div class="plats">
-                        <p>Tarte au citron meringuée destructurée</p>
-                    </div>
-                </article>
+                <div class="titre_section">
+                    <img src="../image/menu1_gauche.png" alt="trait gauche">
+                    <h3>Mouvement final</h3>
+                    <img src="../image/menu1_droite.png" alt="trait droite">
+                </div>
+                <ul>
+                    <li>
+                        <p class="plats">Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
+                    </li>
+                    <li>
+                        <p class="plats">Baba au rhum revisité avec son coulis de citron</p>
+                    </li>             
+                    <li>
+                        <p class="plats">Tarte au citron meringuée destructurée</p>
+                    </li>
+                </ul>
             </section>
             <footer>
                 <p><i class="fas fa-music"></i> La note enchantée</p>
@@ -107,7 +92,7 @@
         <!--le footer contient une liste avec 2 parties une des mentions legales et une autre avec le contact-->
             <ul>
                 <li>
-                    <a href="html/mentions.html"  target="_blank">Mentions légales</a>
+                    <a href="mentions.html"  target="_blank">Mentions légales</a>
                 </li>
                 <li>
                     <a href="mailto:Ohmyfood@gmail.com">Contactez-nous</a>
