--- a/html/menu3.html
+++ b/html/menu3.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ohmyfood</title>
     <link rel="stylesheet" href="../style.css">
+    <link href="../logo/logo.jpg" rel="shortcut icon" >
     <script src="https://kit.fontawesome.com/0c7937f838.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -15,53 +16,71 @@
         </header>
 
         <main id="menu3">
-            <section>
+            <header>
                 <h2>Le délice des papilles</h2>
+            </header>
+            <section>
+                <div class="titre_section">
+                    <img src="../image/menu3_gauche_entree.png" alt="trait gauche">
+                    <h3>Pour bien commencer</h3>
+                    <img src="../image/menu3_droite_entree.png" alt="trait droite">
+                </div>
+                <ul>
+                    <li>
+                        <p class="plats">Tartare de thon assaisonné au yuzu</p>
+                        <p class="prix">55€</p>
+                    </li>
+                    <li>
+                        <p class="plats">Bouchée de homard croustillant et sa farandole de petits légumes</p>
+                        <p class="prix">89€</p>
+                    </li>
+                    <li>
+                        <p class="plats">Velouté de cèpes aux truffes</p>
+                        <p class="prix">56€</p>
+                    </li>
+                </ul>
             </section>
             <section>
-                <h3>Pour bien commencer</h3>
-                <article>
-                    <ul class="plats">
-                        <li>Tartare de thon assaisonné au yuzu</li>
-                        <li>Bouchée de homard croustillant et sa farandole de petits légumes</li>
-                        <li>Velouté de cèpes aux truffes</li>
-                    </ul>
-                    <ul class="prix">
-                        <li>55€</li>
-                        <li>89€</li>
-                        <li>56€</li>
-                    </ul>
-                </article>
+                <div class="titre_section">
+                    <img src="../image/menu3_gauche_plat.png" alt="trait gauche">
+                    <h3>Pour bien continuer</h3>
+                    <img src="../image/menu3_droite_plat.png" alt="trait droite">
+                </div>
+                <ul>
+                    <li>
+                        <p class="plats">Poulet rôti aux herbes de provence et sa crème de truffe</p>
+                        <p class="prix">110€</p>     
+                    </li>
+                    <li>
+                        <p class="plats">Langouste rôtie et ses légumes de saison</p>
+                        <p class="prix">225€</p>        
+                    </li>
+                    <li>
+                        <p class="plats">Côte de boeuf angus et sa purée de panais</p>
+                        <p class="prix">115€</p>
+                    </li>
+                </ul>
             </section>
             <section>
-                <h3>Pour bien continuer</h3>
-                <article>
-                    <ul class="plats">
-                        <li>Poulet rôti aux herbes de provence et sa crème de truffe</li>
-                        <li>Langouste rôtie et ses légumes de saison</li>
-                        <li>Côte de boeuf angus et sa purée de panais</li>
-                    </ul>
-                    <ul class="prix">
-                        <li>110€</li>
-                        <li>225€</li>
-                        <li>115€</li>
-                    </ul>
-                </article>
-            </section>
-            <section>
-                <h3>Pour bien terminer</h3>
-                <article>
-                    <ul class="plats">
-                        <li>Farandole de desserts du chef</li>
-                        <li>Crème brulée revisitée</li>
-                        <li>Tiramisu à la noisette</li>
-                    </ul>
-                    <ul class="prix">
-                        <li>55€</li>
-                        <li>60€</li>
-                        <li>55€</li>
-                    </ul>
-                </article>
+                <div class="titre_section">
+                    <img src="../image/menu3_gauche_dessert.png" alt="trait gauche">
+                    <h3>Pour bien terminer</h3>
+                    <img src="../image/menu3_droite_dessert.png" alt="trait droite">
+                </div>
+                <ul>
+                    <li>
+                        <p class="plats">Farandole de desserts du chef</p>
+                        <p class="prix">55€</p>
+                    </li>
+                    <li>
+                        <p class="plats">Crème brulée revisitée</p>
+                        <p class="prix">60€</p>     
+                    </li>
+                    <li>
+                        <p class="plats">Tiramisu à la noisette</p>
+                        <p class="prix">55€</p>
+                    </li>
+                </ul>
             </section>
         </main>
 
@@ -69,7 +88,7 @@
         <!--le footer contient 2 parties une des mentions legales et une autre avec le contact-->
             <ul>
                 <li>
-                    <a href="html/mentions.html"  target="_blank">Mentions légales</a>
+                    <a href="mentions.html"  target="_blank">Mentions légales</a>
                 </li>
                 <li>
                     <a href="mailto:Ohmyfood@gmail.com">Contactez-nous</a>
