--- a/html/menu2.html
+++ b/html/menu2.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ohmyfood</title>
     <link rel="stylesheet" href="../style.css">
+    <link href="../logo/logo.jpg" rel="shortcut icon" >
     <script src="https://kit.fontawesome.com/0c7937f838.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -15,48 +16,68 @@
         </header>
 
         <main id="menu2">
-            <section>
+            <header>
                 <h2>Le chic à la française</h2>
-            </section>
+            </header>
             <section id="entrée">
-                <h3>Pour se mettre en appétit</h3>
-                <article>
-                    <ul class="plats">
-                        <li>Tartare de poulpe acidulé aux zests d'orange</li>
-                        <li>Velouté de légumes d'antan</li>
-                        <li>Soupe à l'oignon revisitée</li>
-                    </ul>
-                    <ul class="prix">
-                        <li>79€</li>
-                        <li>57€</li>
-                        <li>57€</li>
-                    </ul>
-                </article>
+                <div class="titre_section">
+                    <img src="../image/menu2_gauche_entree.png" alt="trait gauche">
+                    <h3>Pour se mettre en appétit</h3>
+                    <img src="../image/menu2_droite_entree.png" alt="trait droite">
+                </div>
+                <ul>
+                    <li>
+                        <p class="plats">Tartare de poulpe acidulé aux zests d'orange</p>
+                        <p class="prix">79€</p>
+                    </li>
+                    <li>
+                        <p class="plats">Velouté de légumes d'antan</p>
+                        <p class="prix">57€</p>
+                    </li>
+                    <li>
+                        <p class="plats">Soupe à l'oignon revisitée</p>
+                        <p class="prix">57€</p>
+                    </li>
+                </ul>
             </section>
             <section id="plat">
-                <h3>Plaisir des papilles</h3>
-                <article>
-                    <ul class="plats">
-                        <li>Coquilles Saint-Jacques accompagnées d'une purée de panais</li>
-                        <li>Magret de canard et parmentier de pommes de terres</li>
-                        <li>Mijoté de queue de boeuf et riz sauvage aux zests de citron</li>
-                    </ul>
-                    <ul class="prix">
-                        <li>95€</li>
-                        <li>88€</li>
-                        <li>175€</li>
-                    </ul>
-                </article>
+                <div class="titre_section">
+                    <img src="../image/menu2_gauche_plat.png" alt="trait gauche">
+                    <h3>Plaisir des papilles</h3>
+                    <img src="../image/menu2_droite_plat.png" alt="trait droite">
+                </div>
+                <ul>
+                    <li>
+                        <p class="plats">Coquilles Saint-Jacques accompagnées d'une purée de panais</p>
+                        <p class="prix">95€</p>
+                    </li>
+                    <li>
+                        <p class="plats">Magret de canard et parmentier de pommes de terres</p>
+                        <p class="prix">88€</p>
+                    </li>
+                    <li>
+                        <p class="plats">Mijoté de queue de boeuf et riz sauvage aux zests de citron</p>
+                        <p class="prix">175€</p>
+                    </li>
+                </ul>
             </section>
             <section id="dessert">
-                <h3>Gourmandises sucrées</h3>
-                <article>
-                    <ul class="plats">
-                        <li>Pétales de violettes glacés et purée de noisettes</li>
-                        <li>Fondant au chocolat revisité</li>
-                        <li>Millefeuille croustillant</li>
-                    </ul>
-                </article>
+                <div class="titre_section">
+                    <img src="../image/menu2_gauche_dessert.png" alt="trait gauche">
+                    <h3>Gourmandises sucrées</h3>
+                    <img src="../image/menu2_droite_dessert.png" alt="trait droite">
+                </div>
+                <ul>
+                    <li>
+                        <p class="plats">Pétales de violettes glacés et purée de noisettes</p>
+                    </li>
+                    <li>
+                        <p class="plats">Fondant au chocolat revisité</p>
+                    </li>
+                    <li>
+                        <p class="plats">Millefeuille croustillant</p>
+                    </li>
+                </ul>
             </section>
         </main>
 
@@ -64,7 +85,7 @@
         <!--le footer contient 2 parties une des mentions legales et une autre avec le contact-->
             <ul>
                 <li>
-                    <a href="html/mentions.html"  target="_blank">Mentions légales</a>
+                    <a href="mentions.html"  target="_blank">Mentions légales</a>
                 </li>
                 <li>
                     <a href="mailto:Ohmyfood@gmail.com">Contactez-nous</a>
