Projet fini sans les MQ v2

--- a/html/menu1.html
+++ b/html/menu1.html
@@ -22,7 +22,10 @@
             <section>
                 <div class="titre_section">
                     <img src="../image/menu1_gauche.png" alt="trait gauche">
-                    <h3>Prélude</h3>
+                    <div class="animation_bordure">
+                        <h3>Prélude</h3>
+                        <div class="bordure"></div>
+                    </div>
                     <img src="../image/menu1_droite.png" alt="trait droite">
                 </div>
                 <ul>
@@ -47,7 +50,10 @@
             <section>
                 <div class="titre_section">
                     <img src="../image/menu1_gauche.png" alt="trait gauche">
-                    <h3>Point d'orgue</h3>
+                    <div class="animation_bordure">
+                        <h3>Point d'orgue</h3>
+                        <div class="bordure"></div>
+                    </div>
                     <img src="../image/menu1_droite.png" alt="trait droite">
                 </div>
                 <ul>
@@ -68,7 +74,10 @@
             <section>
                 <div class="titre_section">
                     <img src="../image/menu1_gauche.png" alt="trait gauche">
-                    <h3>Mouvement final</h3>
+                    <div class="animation_bordure">
+                        <h3>Mouvement final</h3>
+                        <div class="bordure"></div>
+                    </div>
                     <img src="../image/menu1_droite.png" alt="trait droite">
                 </div>
                 <ul>
