--- a/html/menu3.html
+++ b/html/menu3.html
@@ -6,7 +6,6 @@
     <title>Ohmyfood</title>
     <link rel="stylesheet" href="../style.css">
     <link href="../logo/logo.jpg" rel="shortcut icon" >
-    <script src="https://kit.fontawesome.com/0c7937f838.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="container">
@@ -19,10 +18,13 @@
             <header>
                 <h2>Le délice des papilles</h2>
             </header>
-            <section>
+            <section id="entree">
                 <div class="titre_section">
                     <img src="../image/menu3_gauche_entree.png" alt="trait gauche">
-                    <h3>Pour bien commencer</h3>
+                    <div class="animation_bordure">
+                        <h3>Pour bien commencer</h3>
+                        <div class="bordure"></div>
+                    </div>
                     <img src="../image/menu3_droite_entree.png" alt="trait droite">
                 </div>
                 <ul>
@@ -40,10 +42,13 @@
                     </li>
                 </ul>
             </section>
-            <section>
+            <section id="plat">
                 <div class="titre_section">
                     <img src="../image/menu3_gauche_plat.png" alt="trait gauche">
-                    <h3>Pour bien continuer</h3>
+                    <div class="animation_bordure">
+                        <h3>Pour bien continuer</h3>
+                        <div class="bordure"></div>
+                    </div>
                     <img src="../image/menu3_droite_plat.png" alt="trait droite">
                 </div>
                 <ul>
@@ -61,10 +66,13 @@
                     </li>
                 </ul>
             </section>
-            <section>
+            <section id="dessert">
                 <div class="titre_section">
                     <img src="../image/menu3_gauche_dessert.png" alt="trait gauche">
-                    <h3>Pour bien terminer</h3>
+                    <div class="animation_bordure">
+                        <h3>Pour bien terminer</h3>
+                        <div class="bordure"></div>
+                    </div>
                     <img src="../image/menu3_droite_dessert.png" alt="trait droite">
                 </div>
                 <ul>
