--- a/html/menu4.html
+++ b/html/menu4.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ohmyfood</title>
     <link rel="stylesheet" href="../style.css">
-    <script src="https://kit.fontawesome.com/0c7937f838.js" crossorigin="anonymous"></script>
+    <link href="../logo/logo.jpg" rel="shortcut icon" >
 </head>
 <body>
     <div id="container">
@@ -15,53 +15,80 @@
         </header>
 
         <main id="menu4">
-            <section>
+            <header>
                 <h2>La palette du goût</h2>
+            </header>
+            <section>
+                <div class="titre_section">
+                    <img src="../image/menu4_gauche.png" alt="trait gauche">
+                    <div class="animation_bordure">
+                        <h3>Esquisse</h3>
+                        <div class="bordure"></div>
+                    </div>
+                    <img src="../image/menu4_droite.png" alt="trait droite">
+                </div>
+                <ul>
+                    <li>
+                        <p class="plats">Fricassée d'escargot au piment d'espelette</p>
+                        <p class="prix">60€</p>
+                    </li>
+                    <li>
+                        <p class="plats">Oeuf au plat assaisonné à la truffe sur lit de caviar</p>
+                        <p class="prix">55€</p>
+                    </li>
+                    <li>
+                        <p class="plats">Foie gras de canard mi-cuit et ses copeaux de truffe noire</p>
+                        <p class="prix">65€</p>
+                    </li>
+                </ul>
             </section>
             <section>
-                <h3>Esquisse</h3>
-                <article>
-                    <ul class="plats">
-                        <li>Fricassée d'escargot au piment d'espelette</li>
-                        <li>Oeuf au plat assaisonné à la truffe sur lit de caviar</li>
-                        <li>Foie gras de canard mi-cuit et ses copeaux de truffe noire</li>
-                    </ul>
-                    <ul class="prix">
-                        <li>60€</li>
-                        <li>55€</li>
-                        <li>65€</li>
-                    </ul>
-                </article>
+                <div class="titre_section">
+                    <img src="../image/menu4_gauche.png" alt="trait gauche">
+                    <div class="animation_bordure">
+                        <h3>Oeuvre de Maître</h3>
+                        <div class="bordure"></div>
+                    </div>
+                    <img src="../image/menu4_droite.png" alt="trait droite">
+                </div>
+                <ul>
+                    <li>
+                        <p class="plats">Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</p>
+                        <p class="prix">70€</p>
+                    </li>
+                    <li>
+                        <p class="plats">Parmentier de queue de boeuf à la truffe noire sur sa purée de panais</p>
+                        <p class="prix">85€</p> 
+                    </li>
+                    <li>
+                        <p class="plats">Filet de Turbot aux agrumes</p>
+                        <p class="prix">125€</p>
+                    </li>
+                </ul>
             </section>
             <section>
-                <h3>Oeuvre de maître</h3>
-                <article>
-                    <ul class="plats">
-                        <li>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</li>
-                        <li>Parmentier de queue de boeuf à la truffe noire sur sa purée de panais</li>
-                        <li>Filet de Turbot aux agrumes</li>
-                    </ul>
-                    <ul class="prix">
-                        <li>70€</li>
-                        <li>85€</li>
-                        <li>125€</li>
-                    </ul>
-                </article>
-            </section>
-            <section>
-                <h3>Au sommet de l'art</h3>
-                <article>
-                    <ul class="plats">
-                        <li>Paris-Brest revisité</li>
-                        <li>Macaron au chocolat d'exception et glace à la vanille de Madagascar</li>
-                        <li>Mousse au chocolat au piment d'espelette et à la truffe noire</li>
-                    </ul>
-                    <ul class="prix">
-                        <li>55€</li>
-                        <li>65€</li>
-                        <li>60€</li>
-                    </ul>
-                </article>
+                <div class="titre_section">
+                    <img src="../image/menu4_gauche.png" alt="trait gauche">
+                    <div class="animation_bordure">
+                        <h3>Au sommet de l'art</h3>
+                        <div class="bordure"></div>
+                    </div>
+                    <img src="../image/menu4_droite.png" alt="trait droite">
+                </div>
+                <ul>
+                    <li>
+                        <p class="plats">Paris-Brest revisité</p>
+                        <p class="prix">55€</p>
+                    </li>
+                    <li>
+                        <p class="plats">Macaron au chocolat d'exception et glace à la vanille de Madagascar</p>
+                        <p class="prix">65€</p>   
+                    </li>
+                    <li>
+                        <p class="plats">Mousse au chocolat au piment d'espelette et à la truffe noire</p>
+                        <p class="prix">60€</p>
+                    </li>
+                </ul>
             </section>
         </main>
 
@@ -69,7 +96,7 @@
         <!--le footer contient 2 parties une des mentions legales et une autre avec le contact-->
             <ul>
                 <li>
-                    <a href="html/mentions.html"  target="_blank">Mentions légales</a>
+                    <a href="mentions.html"  target="_blank">Mentions légales</a>
                 </li>
                 <li>
                     <a href="mailto:Ohmyfood@gmail.com">Contactez-nous</a>
