--- a/html/menu2.html
+++ b/html/menu2.html
@@ -6,7 +6,6 @@
     <title>Ohmyfood</title>
     <link rel="stylesheet" href="../style.css">
     <link href="../logo/logo.jpg" rel="shortcut icon" >
-    <script src="https://kit.fontawesome.com/0c7937f838.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="container">
@@ -19,10 +18,13 @@
             <header>
                 <h2>Le chic à la française</h2>
             </header>
-            <section id="entrée">
+            <section id="entree">
                 <div class="titre_section">
                     <img src="../image/menu2_gauche_entree.png" alt="trait gauche">
-                    <h3>Pour se mettre en appétit</h3>
+                    <div class="animation_bordure">
+                        <h3>Pour se mettre en appétit</h3>
+                        <div class="bordure"></div>
+                    </div>
                     <img src="../image/menu2_droite_entree.png" alt="trait droite">
                 </div>
                 <ul>
@@ -43,7 +45,10 @@
             <section id="plat">
                 <div class="titre_section">
                     <img src="../image/menu2_gauche_plat.png" alt="trait gauche">
-                    <h3>Plaisir des papilles</h3>
+                    <div class="animation_bordure">
+                        <h3>Plaisir des papilles</h3>
+                        <div class="bordure"></div>
+                    </div>
                     <img src="../image/menu2_droite_plat.png" alt="trait droite">
                 </div>
                 <ul>
@@ -64,7 +69,10 @@
             <section id="dessert">
                 <div class="titre_section">
                     <img src="../image/menu2_gauche_dessert.png" alt="trait gauche">
-                    <h3>Gourmandises sucrées</h3>
+                    <div class="animation_bordure">
+                        <h3>Gourmandises sucrées</h3>
+                        <div class="bordure"></div>
+                    </div>
                     <img src="../image/menu2_droite_dessert.png" alt="trait droite">
                 </div>
                 <ul>
