--- a/html/mentions.html
+++ b/html/mentions.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ohmyfood</title>
+    <link href="../logo/logo.png" rel="shortcut icon" >
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
