--- a/html/menu2.html
+++ b/html/menu2.html
@@ -19,71 +19,62 @@
                 <h2>Le chic à la française</h2>
             </header>
             <section id="entree">
-                <div class="titre_section">
+                <header class="titre_section">
                     <img src="../image/menu2_gauche_entree.png" alt="trait gauche">
-                    <div class="animation_bordure">
-                        <h3>Pour se mettre en appétit</h3>
-                        <div class="bordure"></div>
-                    </div>
+                    <h3>Pour se mettre en appétit</h3>
                     <img src="../image/menu2_droite_entree.png" alt="trait droite">
-                </div>
+                </header>
                 <ul>
                     <li>
-                        <p class="plats">Tartare de poulpe acidulé aux zests d'orange</p>
-                        <p class="prix">79€</p>
+                        <span class="plats">Tartare de poulpe acidulé aux zests d'orange</span>
+                        <span class="prix">79€</span>
                     </li>
                     <li>
-                        <p class="plats">Velouté de légumes d'antan</p>
-                        <p class="prix">57€</p>
+                        <span class="plats">Velouté de légumes d'antan</span>
+                        <span class="prix">57€</span>
                     </li>
                     <li>
-                        <p class="plats">Soupe à l'oignon revisitée</p>
-                        <p class="prix">57€</p>
+                        <span class="plats">Soupe à l'oignon revisitée</span>
+                        <span class="prix">57€</span>
                     </li>
                 </ul>
             </section>
             <section id="plat">
-                <div class="titre_section">
+                <header class="titre_section">
                     <img src="../image/menu2_gauche_plat.png" alt="trait gauche">
-                    <div class="animation_bordure">
-                        <h3>Plaisir des papilles</h3>
-                        <div class="bordure"></div>
-                    </div>
+                    <h3>Plaisir des papilles</h3>
                     <img src="../image/menu2_droite_plat.png" alt="trait droite">
-                </div>
+                </header>
                 <ul>
                     <li>
-                        <p class="plats">Coquilles Saint-Jacques accompagnées d'une purée de panais</p>
-                        <p class="prix">95€</p>
+                        <span class="plats">Coquilles Saint-Jacques accompagnées d'une purée de panais</span>
+                        <span class="prix">95€</span>
                     </li>
                     <li>
-                        <p class="plats">Magret de canard et parmentier de pommes de terres</p>
-                        <p class="prix">88€</p>
+                        <span class="plats">Magret de canard et parmentier de pommes de terres</span>
+                        <span class="prix">88€</span>
                     </li>
                     <li>
-                        <p class="plats">Mijoté de queue de boeuf et riz sauvage aux zests de citron</p>
-                        <p class="prix">175€</p>
+                        <span class="plats">Mijoté de queue de boeuf et riz sauvage aux zests de citron</span>
+                        <span class="prix">175€</span>
                     </li>
                 </ul>
             </section>
             <section id="dessert">
-                <div class="titre_section">
+                <header class="titre_section">
                     <img src="../image/menu2_gauche_dessert.png" alt="trait gauche">
-                    <div class="animation_bordure">
-                        <h3>Gourmandises sucrées</h3>
-                        <div class="bordure"></div>
-                    </div>
+                    <h3>Gourmandises sucrées</h3>
                     <img src="../image/menu2_droite_dessert.png" alt="trait droite">
-                </div>
+                </header>
                 <ul>
                     <li>
-                        <p class="plats">Pétales de violettes glacés et purée de noisettes</p>
+                        <span class="plats">Pétales de violettes glacés et purée de noisettes</span>
                     </li>
                     <li>
-                        <p class="plats">Fondant au chocolat revisité</p>
+                        <span class="plats">Fondant au chocolat revisité</span>
                     </li>
                     <li>
-                        <p class="plats">Millefeuille croustillant</p>
+                        <span class="plats">Millefeuille croustillant</span>
                     </li>
                 </ul>
             </section>
