--- a/html/menu4.html
+++ b/html/menu4.html
@@ -19,74 +19,65 @@
                 <h2>La palette du goût</h2>
             </header>
             <section>
-                <div class="titre_section">
+                <header class="titre_section">
                     <img src="../image/menu4_gauche.png" alt="trait gauche">
-                    <div class="animation_bordure">
-                        <h3>Esquisse</h3>
-                        <div class="bordure"></div>
-                    </div>
+                    <h3>Esquisse</h3>
                     <img src="../image/menu4_droite.png" alt="trait droite">
-                </div>
+                </header>
                 <ul>
                     <li>
-                        <p class="plats">Fricassée d'escargot au piment d'espelette</p>
-                        <p class="prix">60€</p>
+                        <span class="plats">Fricassée d'escargot au piment d'espelette</span>
+                        <span class="prix">60€</span>
                     </li>
                     <li>
-                        <p class="plats">Oeuf au plat assaisonné à la truffe sur lit de caviar</p>
-                        <p class="prix">55€</p>
+                        <span class="plats">Oeuf au plat assaisonné à la truffe sur lit de caviar</span>
+                        <span class="prix">55€</span>
                     </li>
                     <li>
-                        <p class="plats">Foie gras de canard mi-cuit et ses copeaux de truffe noire</p>
-                        <p class="prix">65€</p>
+                        <span class="plats">Foie gras de canard mi-cuit et ses copeaux de truffe noire</span>
+                        <span class="prix">65€</span>
                     </li>
                 </ul>
             </section>
             <section>
-                <div class="titre_section">
+                <header class="titre_section">
                     <img src="../image/menu4_gauche.png" alt="trait gauche">
-                    <div class="animation_bordure">
-                        <h3>Oeuvre de Maître</h3>
-                        <div class="bordure"></div>
-                    </div>
+                    <h3>Oeuvre de Maître</h3>
                     <img src="../image/menu4_droite.png" alt="trait droite">
-                </div>
+                </header>
                 <ul>
                     <li>
-                        <p class="plats">Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</p>
-                        <p class="prix">70€</p>
+                        <span class="plats">Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</span>
+                        <span class="prix">70€</span>
                     </li>
                     <li>
-                        <p class="plats">Parmentier de queue de boeuf à la truffe noire sur sa purée de panais</p>
-                        <p class="prix">85€</p> 
+                        <span class="plats">Parmentier de queue de boeuf à la truffe noire sur sa purée de panais</span>
+                        <span class="prix">85€</span> 
                     </li>
                     <li>
-                        <p class="plats">Filet de Turbot aux agrumes</p>
-                        <p class="prix">125€</p>
+                        <span class="plats">Filet de Turbot aux agrumes</span>
+                        <span class="prix">125€</span>
                     </li>
                 </ul>
             </section>
             <section>
-                <div class="titre_section">
+                <header class="titre_section">
                     <img src="../image/menu4_gauche.png" alt="trait gauche">
-                    <div class="animation_bordure">
-                        <h3>Au sommet de l'art</h3>
-                        <div class="bordure"></div>
-                    </div>
+                    <h3>Au sommet de l'art</h3>
                     <img src="../image/menu4_droite.png" alt="trait droite">
-                </div>
+                </header>
                 <ul>
                     <li>
-                        <p class="plats">Paris-Brest revisité</p>
-                        <p class="prix">55€</p>
+                        <span class="plats">Paris-Brest revisité</span>
+                        <span class="prix">55€</span>
                     </li>
                     <li>
-                        <p class="plats">Macaron au chocolat d'exception et glace à la vanille de Madagascar</p>
-                        <p class="prix">65€</p>   
+                        <span class="plats">Macaron au chocolat d'exception et glace à la vanille de Madagascar</span>
+                        <span class="prix">65€</span>   
                     </li>
                     <li>
-                        <p class="plats">Mousse au chocolat au piment d'espelette et à la truffe noire</p>
-                        <p class="prix">60€</p>
+                        <span class="plats">Mousse au chocolat au piment d'espelette et à la truffe noire</span>
+                        <span class="prix">60€</span>
                     </li>
                 </ul>
             </section>
