--- a/html/menu1.html
+++ b/html/menu1.html
@@ -17,78 +17,70 @@
         
         <main id="menu1">
             <header>
-                <h2><i class="fas fa-music"></i><br/>La note enchantée</h2>
+                <i class="fas fa-music"></i>
+                <h2>La note enchantée</h2>
             </header>
             <section>
-                <div class="titre_section">
+                <header>
                     <img src="../image/menu1_gauche.png" alt="trait gauche">
-                    <div class="animation_bordure">
-                        <h3>Prélude</h3>
-                        <div class="bordure"></div>
-                    </div>
+                    <h3>Prélude</h3>
                     <img src="../image/menu1_droite.png" alt="trait droite">
-                </div>
+                </header>
                 <ul>
                     <li>
-                        <p class="plats">Ravioles de foie gras accompagnés de leur crème à la truffe</p>
-                        <p class="prix">98€</p>
+                        <span class="plats">Ravioles de foie gras accompagnés de leur crème à la truffe</span>
+                        <span class="prix">98€</span>
+                    </li> 
+                    <li>
+                        <span class="plats">Caviar osciètre sur blini à la farine de blé noir</span>
+                        <span class="prix">115€</span>
                     </li>
                     <li>
-                        <p class="plats">Caviar osciètre sur blini à la farine de blé noir</p>
-                        <p class="prix">115€</p>
+                        <span class="plats">Homard et espuma de potiron mariné aux zests d'orange</span>
+                        <span class="prix">89€</span>
                     </li>
                     <li>
-                        <p class="plats">Homard et espuma de potiron mariné aux zests d'orange</p>
-                        <p class="prix">89€</p>
-                    </li>
-                    <li>
-                        <p class="plats">Foie gras de canard cuit entier, confiture de figue et pain toasté</p>
-                        <p class="prix">105€</p>
+                        <span class="plats">Foie gras de canard cuit entier, confiture de figue et pain toasté</span>
+                        <span class="prix">105€</span>
                     </li>
                 </ul>
             </section>
             <section>
-                <div class="titre_section">
+                <header>
                     <img src="../image/menu1_gauche.png" alt="trait gauche">
-                    <div class="animation_bordure">
-                        <h3>Point d'orgue</h3>
-                        <div class="bordure"></div>
-                    </div>
+                    <h3>Point d'orgue</h3>
                     <img src="../image/menu1_droite.png" alt="trait droite">
-                </div>
+                </header>
                 <ul>
                     <li>
-                        <p class="plats">Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave</p>
-                        <p class="prix">102€</p>
+                        <span class="plats">Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave</span>
+                        <span class="prix">102€</span>
                     </li>
                     <li>
-                        <p class="plats">Langoustine poêlée, purée de patate douce</p>
-                        <p class="prix">205€</p>
+                        <span class="plats">Langoustine poêlée, purée de patate douce</span>
+                        <span class="prix">205€</span>
                     </li>
                     <li>
-                        <p class="plats">Mijoté de queue de boeuf et riz sauvage aux zests de citron</p>
-                        <p class="prix">169€</p>
+                        <span class="plats">Mijoté de queue de boeuf et riz sauvage aux zests de citron</span>
+                        <span class="prix">169€</span>
                     <li>
                 </ul>
             </section>
             <section>
-                <div class="titre_section">
+                <header>
                     <img src="../image/menu1_gauche.png" alt="trait gauche">
-                    <div class="animation_bordure">
-                        <h3>Mouvement final</h3>
-                        <div class="bordure"></div>
-                    </div>
+                    <h3>Mouvement final</h3>
                     <img src="../image/menu1_droite.png" alt="trait droite">
-                </div>
+                </header>
                 <ul>
                     <li>
-                        <p class="plats">Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
+                        <span class="plats">Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</span>
                     </li>
                     <li>
-                        <p class="plats">Baba au rhum revisité avec son coulis de citron</p>
+                        <span class="plats">Baba au rhum revisité avec son coulis de citron</span>
                     </li>             
                     <li>
-                        <p class="plats">Tarte au citron meringuée destructurée</p>
+                        <span class="plats">Tarte au citron meringuée destructurée</span>
                     </li>
                 </ul>
             </section>
