--- a/html/menu3.html
+++ b/html/menu3.html
@@ -19,74 +19,65 @@
                 <h2>Le délice des papilles</h2>
             </header>
             <section id="entree">
-                <div class="titre_section">
+                <header class="titre_section">
                     <img src="../image/menu3_gauche_entree.png" alt="trait gauche">
-                    <div class="animation_bordure">
-                        <h3>Pour bien commencer</h3>
-                        <div class="bordure"></div>
-                    </div>
+                    <h3>Pour bien commencer</h3>
                     <img src="../image/menu3_droite_entree.png" alt="trait droite">
-                </div>
+                </header>
                 <ul>
                     <li>
-                        <p class="plats">Tartare de thon assaisonné au yuzu</p>
-                        <p class="prix">55€</p>
+                        <span class="plats">Tartare de thon assaisonné au yuzu</span>
+                        <span class="prix">55€</span>
                     </li>
                     <li>
-                        <p class="plats">Bouchée de homard croustillant et sa farandole de petits légumes</p>
-                        <p class="prix">89€</p>
+                        <span class="plats">Bouchée de homard croustillant et sa farandole de petits légumes</span>
+                        <span class="prix">89€</span>
                     </li>
                     <li>
-                        <p class="plats">Velouté de cèpes aux truffes</p>
-                        <p class="prix">56€</p>
+                        <span class="plats">Velouté de cèpes aux truffes</span>
+                        <span class="prix">56€</span>
                     </li>
                 </ul>
             </section>
             <section id="plat">
-                <div class="titre_section">
+                <header class="titre_section">
                     <img src="../image/menu3_gauche_plat.png" alt="trait gauche">
-                    <div class="animation_bordure">
-                        <h3>Pour bien continuer</h3>
-                        <div class="bordure"></div>
-                    </div>
+                    <h3>Pour bien continuer</h3>
                     <img src="../image/menu3_droite_plat.png" alt="trait droite">
-                </div>
+                </header>
                 <ul>
                     <li>
-                        <p class="plats">Poulet rôti aux herbes de provence et sa crème de truffe</p>
-                        <p class="prix">110€</p>     
+                        <span class="plats">Poulet rôti aux herbes de provence et sa crème de truffe</span>
+                        <span class="prix">110€</span>     
                     </li>
                     <li>
-                        <p class="plats">Langouste rôtie et ses légumes de saison</p>
-                        <p class="prix">225€</p>        
+                        <span class="plats">Langouste rôtie et ses légumes de saison</span>
+                        <span class="prix">225€</span>        
                     </li>
                     <li>
-                        <p class="plats">Côte de boeuf angus et sa purée de panais</p>
-                        <p class="prix">115€</p>
+                        <span class="plats">Côte de boeuf angus et sa purée de panais</span>
+                        <span class="prix">115€</span>
                     </li>
                 </ul>
             </section>
             <section id="dessert">
-                <div class="titre_section">
+                <header class="titre_section">
                     <img src="../image/menu3_gauche_dessert.png" alt="trait gauche">
-                    <div class="animation_bordure">
-                        <h3>Pour bien terminer</h3>
-                        <div class="bordure"></div>
-                    </div>
+                    <h3>Pour bien terminer</h3>
                     <img src="../image/menu3_droite_dessert.png" alt="trait droite">
-                </div>
+                </header>
                 <ul>
                     <li>
-                        <p class="plats">Farandole de desserts du chef</p>
-                        <p class="prix">55€</p>
+                        <span class="plats">Farandole de desserts du chef</span>
+                        <span class="prix">55€</span>
                     </li>
                     <li>
-                        <p class="plats">Crème brulée revisitée</p>
-                        <p class="prix">60€</p>     
+                        <span class="plats">Crème brulée revisitée</span>
+                        <span class="prix">60€</span>     
                     </li>
                     <li>
-                        <p class="plats">Tiramisu à la noisette</p>
-                        <p class="prix">55€</p>
+                        <span class="plats">Tiramisu à la noisette</span>
+                        <span class="prix">55€</span>
                     </li>
                 </ul>
             </section>
